force-app/main/default/objects/ssot__AdSite__dlm/fields/ssot__AdSiteGroup__c.field-meta.xml
<CustomField>
    <fullName>ssot__AdSiteGroup__c</fullName>
    <label>Ad Site Group</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AdSiteGroup</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>