force-app/main/default/objects/ssot__AdSite__dlm/fields/ssot__AdSiteNetwork__c.field-meta.xml
<CustomField>
    <fullName>ssot__AdSiteNetwork__c</fullName>
    <label>Ad Site Network</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AdSiteNetwork</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>